--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,7 +44,7 @@
             </a>
           </li>
           <li>
-            <a href="{{ relativebase }}about.html">
+            <a href="{{ relativebase }}blog.html">
               <div class="left">
                 About
               </div>
